# SmartAccessControl

./: .coverage  .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  accuracy_baseline.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
configs/: config.yaml
data/: face_db.npy
deploy/: deploy.sh  docker-compose.yml  entrypoint.sh  healthcheck.sh  rollback.sh  start_camera_bridge.sh
deploy/mosquitto/: mosquitto.conf
report/: FINAL_REPORT.md  optimization_journey.csv  utilization.csv
scripts/: analyze_decisions.py  collect_faces.py  enroll.py  parse_tegrastats.py  record_session.py
src/: __init__ .py  __init__.py  actuator_controller.py  buzzer.py  decision_engine.py  hc_sr04.py  led.py  mqtt_publisher.py  orchestrator.py  servo.py
src/antispoof/: antispoof.py  blink.py
src/detection/: detector.py
src/mqtt/: publisher.py
src/pipeline/: main.py
src/recognition/: recognizer.py
tests/: conftest.py  test_accuracy_gate.py  test_actuator_controller.py  test_anstipoof.py  test_antispoof.py  test_blink.py  test_decision_engine.py  test_detector.py  test_mqtt_publisher.py  test_orchestrator.py  test_pipeline.py  test_recognizer  test_recognizer.py  test_sensors.py
tests/integration/: test_buzzer_thread_completion.py  test_decision_to_actuator.py  test_hardware_safety.py  test_jetson_smoke.py  test_mqtt_payload_schema.py  test_orchestrator_pipeline.py  test_thread_safety.py
tools/: md2pdf.py
