# =========================================================================
# Smart Access Control — Coding-Compliance Policy — READ BEFORE MODIFYING
# -------------------------------------------------------------------------
# `pdm run check` runs five sub-checks (ruff format, ruff lint, mypy,
# bandit, pylint) and `pdm run ci` additionally runs `test-cov` (pytest +
# coverage ≥ 90 %). Everything must pass for submission.
#
# *** No new suppressions are allowed. ***
#
# The ONLY sanctioned exclusions are the ones listed below; each one has
# a comment explaining the specific reason it is required. Adding any
# additional suppression is a grading violation. This includes:
#
# - Inline `# noqa`, `# noqa: <code>` markers in .py files
# - Inline `# pylint: disable=<check>` pragmas in .py files
# - Inline `# type: ignore` / `# type: ignore[<code>]` in .py files
# - Inline `# nosec` / `# nosec B<NNN>` in .py files
# - New rule codes added to [tool.ruff.lint] `ignore` / `per-file-ignores`
# - New module names added to [tool.mypy.overrides]
# - New test IDs added to [tool.bandit] `skips`
# - New checks added to [tool.pylint."messages control"] `disable`
#
# If a compliance check fires on your code, FIX THE CODE.
# =========================================================================

[project]
name = "smart-access-control"
version = "0.1.0"
description = "Smart Laboratory Access Control System — Edge AI on Jetson Orin Nano"
requires-python = "==3.10.*"
dependencies = [
    # MQTT publisher (Kit #1 → broker → subscriber dashboard)
    "paho-mqtt>=2.0",
    # Face embedding L2-norm, cosine similarity, frame buffers.
    # Capped <2 because torch C extensions in the dustynv base image
    # are compiled against numpy 1.x ABI; numpy 2 breaks torch at import.
    "numpy>=1.26,<2",
    # GPIO control for HC-SR04 / servo / LEDs / buzzer.
    # Jetson.GPIO is a pure-Python wrapper that works on Orin Nano via
    # the libgpiod backend — safe to install via pdm.
    "Jetson.GPIO>=2.1",
    "ultralytics>=8.4.60",
    "gpiod>=2.4.2",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    # cv2 + paho are needed by tests because src/inference_node.py
    # imports them at module load. Tests then mock the actual behavior.
    "opencv-python==4.10.0.84",
]
quality = [
    "ruff>=0.6",
    "mypy>=1.8",
    "bandit>=1.7",
    "pylint>=3.0",
]

# These packages are already provided by the dustynv/pytorch base image
# (Jetson-specific ARM64 + CUDA 12.6 builds). Excluding them from pdm
# resolution keeps `pdm export` from pulling generic x86/CUDA wheels that
# would clobber the working container setup at build time.
# Note: numpy is NOT excluded — we pin it as a direct dep so pip respects
# the version even when transitive packages (matplotlib, etc.) request 2.x.
[tool.pdm.resolution]
excludes = [
    "torch", "torchvision", "triton", "sympy",
    "opencv-python", "opencv-python-headless",
    "onnxruntime", "onnxruntime-gpu",
    "tensorrt", "tensorrt-cu12",
    # These three are the parents that drag in the whole CUDA 13 wheel set
    # as extras (`cuda-toolkit[cublas,cudart,...]`). Excluding the parents
    # is what actually prevents the transitive pull.
    "cuda-toolkit", "cuda-bindings", "cuda-pathfinder",
    "nvidia-cublas", "nvidia-cuda-cupti", "nvidia-cuda-nvrtc",
    "nvidia-cuda-runtime", "nvidia-cudnn-cu13", "nvidia-cufft",
    "nvidia-cufile", "nvidia-curand", "nvidia-cusolver",
    "nvidia-cusparse", "nvidia-cusparselt-cu13", "nvidia-nccl-cu13",
    "nvidia-nvjitlink", "nvidia-nvshmem-cu13", "nvidia-nvtx",
]

[tool.pdm.scripts]
test = {shell = "echo; echo '━━━ pytest [test] ━━━'; pytest"}
lint = {shell = "echo; echo '━━━ ruff check [lint] ━━━'; ruff check ."}
format = {shell = "echo; echo '━━━ ruff format [format] ━━━'; ruff format ."}

[tool.pdm.scripts.test-cov]
shell = """\
echo; echo '━━━ pytest + coverage [test-cov] ━━━'; \
pytest --ignore=tests/integration --cov=src --cov-report=term-missing \
  --cov-report=html --cov-fail-under=90\
"""

[tool.pdm.scripts.lint-fix]
shell = """\
echo; echo '━━━ ruff check --fix [lint-fix] ━━━'; \
ruff check --fix .\
"""

[tool.pdm.scripts.format-check]
shell = """\
echo; echo '━━━ ruff format --check [format-check] ━━━'; \
ruff format --check .\
"""

# === CUSTOMIZE: 列你 src/ 下實際的主類別檔案 ===
# 我先列出提案 §4 的三個核心模組；之後新增模組（如 enrollment.py、
# state_machine.py、actuator_controller.py 拆分等）就接在後面。
[tool.pdm.scripts.typecheck]
shell = """\
echo; echo '━━━ mypy [typecheck] ━━━'; \
mypy src/inference_node.py src/actuator_controller.py src/mqtt_publisher.py\
"""

[tool.pdm.scripts.security]
shell = """\
echo; echo '━━━ bandit [security] ━━━'; \
bandit -r src -c pyproject.toml\
"""

[tool.pdm.scripts.pylint]
shell = """\
echo; echo '━━━ pylint [pylint] ━━━'; \
pylint src/inference_node.py src/actuator_controller.py src/mqtt_publisher.py \
  --fail-under=7.0\
"""

check = {composite = [
    "format-check", "lint", "typecheck", "security", "pylint",
]}
ci = {composite = ["check", "test-cov"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
# ---------------------------------------------------------------------------
# Custom mark registration.
# pytest requires all custom marks to be declared here; undeclared marks
# produce PytestUnknownMarkWarning and fail under --strict-markers.
# "hardware" is not a suppression — it is a test-selection label that
# controls which tests run on the Jetson self-hosted runner vs. CI.
# ---------------------------------------------------------------------------
markers = [
    "hardware: marks tests that require real Jetson GPIO hardware (deselect with '-m \"not hardware\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "tests/*"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", ".pdm-build", "scripts", "src/detection", "src/recognition", "src/antispoof", "src/pipeline",]

[tool.ruff.lint]
select = [
    "E", "F", "W",          # pycodestyle + pyflakes
    "I",                    # isort
    "B",                    # flake8-bugbear
    "UP",                   # pyupgrade
    "SIM",                  # flake8-simplify
    "N",                    # pep8-naming
    "RUF",                  # ruff-specific
    "PLR2004",              # magic-value-comparison
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206",
    "ANN401",               # no typing.Any in signatures
    "D",                    # pydocstyle
]
ignore = [
    # Forced exclusions (each justified):
    # bare-except — paho callbacks swallow ALL exceptions
    "E722",
    # ambiguous unicode (false positives in 中文 file headers)
    "RUF001", "RUF002", "RUF003",
    "RUF005",   # collection-literal-concatenation (style preference, not a bug)
    "N802",     # invalid-function-name — http.server's do_GET is fixed by stdlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = false
suppress-dummy-args = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_any_explicit = true

# Third-party modules without published type stubs.
# cv2, paho.mqtt, ultralytics: no stubs published.
# yaml: PyYAML's stubs are in `types-PyYAML` but we don't need them.
# Jetson.GPIO: no stubs — wraps libgpiod.
[[tool.mypy.overrides]]
module = [
    "cv2", "paho.mqtt", "paho.mqtt.client", "paho.mqtt.enums",
    "ultralytics", "yaml",
    "Jetson", "Jetson.GPIO",
]
ignore_missing_imports = true

[tool.bandit]
skips = [
    # assert_used — pytest tests legitimately use bare assert
    "B101",
    # hardcoded_tmp_directory — test fixtures use predictable paths
    "B108",
]
exclude_dirs = ["tests", ".venv", ".mypy_cache", ".pdm-build"]

[tool.pylint.main]
ignored-modules = ["cv2", "ultralytics", "Jetson.GPIO"]

[tool.pylint.basic]
no-docstring-rgx = "^$"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "fixme",
    "invalid-name",
    # lazy-import ultralytics to keep x86 tests fast
    "import-outside-toplevel",
]

[tool.pylint.design]
max-args = 8
max-attributes = 10

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"