# =========================================================================
# Smart Access Control — Coding-Compliance Policy — READ BEFORE MODIFYING
# -------------------------------------------------------------------------
# `pdm run check` runs five sub-checks (ruff format, ruff lint, mypy,
# bandit, pylint) and `pdm run ci` additionally runs `test-cov` (pytest +
# coverage ≥ 90 %). Everything must pass for submission.
#
# *** No new suppressions are allowed. ***
#
# The ONLY sanctioned exclusions are the ones listed below; each one has
# a comment explaining the specific reason it is required. Adding any
# additional suppression is a grading violation. This includes:
#
# - Inline `# noqa`, `# noqa: <code>` markers in .py files
# - Inline `# pylint: disable=<check>` pragmas in .py files
# - Inline `# type: ignore` / `# type: ignore[<code>]` in .py files
# - Inline `# nosec` / `# nosec B<NNN>` in .py files
# - New rule codes added to [tool.ruff.lint] `ignore` / `per-file-ignores`
# - New module names added to [tool.mypy.overrides]
# - New test IDs added to [tool.bandit] `skips`
# - New checks added to [tool.pylint."messages control"] `disable`
#
# If a compliance check fires on your code, FIX THE CODE.
# =========================================================================

[project]
name = "smart-access-control"
version = "0.1.0"
description = "Smart Laboratory Access Control System — Edge AI on Jetson Orin Nano"
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["D", "E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "F401", "RUF059", "N806", "E402"]
